fix: copy button overlaps with content

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -450,6 +450,10 @@ body .ddoc {
     }
   }
 
+  .usageContent pre.highlight > code:first-child {
+    @apply inline-flex pt-2 pr-10 pb-2 pl-2 ;
+  }
+
   .usageContent .markdown {
     @apply max-w-full;
   }
